# BmpImageZip

./: CMakeLists.txt  Readme.md  Test.qmlproject  Test.qmlproject.qtds  qds.cmake
App/: logger.h  macros.h  main.cpp
App/Controller/: asyncDecorator.h  controller.cpp  controller.h  taskResult.cpp  taskResult.h
App/Controller/Compressor/: compressor.h
App/Model/: file.cpp  file.h  filesListModel.cpp  filesListModel.h  model.cpp  model.h
App/autogen/: environment.h
CompressorLib/: CMakeLists.txt  compressor.h
Doc/: modelStructure.puml
Test/: CMakeLists.txt  Constants.qml  EventListSimulator.qml
TestContent/: App.qml  CMakeLists.txt
TestContent/modals/: CustomModal.qml  DialogManager.qml  ErrorModal.qml  WaitModal.qml
TestContent/pages/: PreviewPage.qml  SavePage.qml  SelectFilePage.qml  StartPage.qml
TestContent/widgets/: BackButton.qml  CustomButton.qml  FileDelegate.qml
testTask/: interview-task_20230518.md
